hero jump fix

--- a/app/assets/stylesheets/public_website/hero.css.scss
+++ b/app/assets/stylesheets/public_website/hero.css.scss
@@ -1,11 +1,22 @@
 .hero-carousel {
   width: 100%;
-  height: auto;
-  max-height: 460px;
+  height: 460px;
 
   img {
     width: 100%;
+    height: 460px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .hero-carousel {
     height: auto;
     max-height: 460px;
+
+    img {
+      height: auto;
+      max-height: 460px;
+    }
   }
+
 }
